--- a/index.html
+++ b/index.html
@@ -76,12 +76,20 @@
                 </div>
 
                 <div class="numeros">
-                    <label for="seth">Horas:</label>
-                    <input type="number" name="seth" id="seth" min="0" max="12" value="0">
-                    <label for="setm">Minutos:</label>
-                    <input type="number" name="setm" id="setm" min="0" max="59" value="0">
-                    <label for="setm">Segundos:</label>
-                    <input type="num ber" name="sets" id="sets" min="0" max="59" value="0">
+                    <div class="numeros__cont">
+                        <label for="seth">Horas:</label>
+                        <input type="number" name="seth" id="seth" min="0" max="12" value="0">
+                    </div>
+
+                    <div class="numeros__cont">
+                        <label for="setm">Minutos:</label>
+                        <input type="number" name="setm" id="setm" min="0" max="59" value="0">
+                    </div>
+
+                    <div class="numeros__cont">
+                        <label for="setm">Segundos:</label>
+                        <input type="num ber" name="sets" id="sets" min="0" max="59" value="0">
+                    </div>
                 </div>
                 
                 <div class="btn-start">
